fix padding on mobile and tablets

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -4,10 +4,6 @@ body {
 
 /* structure */
 
-.container {
-  max-width: 1100px
-}
-
 .section {
   padding: 3rem 0rem
 }
